--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,21 @@
 spring.application.name=ws-app-siav
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:29020/railway
-spring.datasource.username=postgres
-spring.datasource.password=nODKHQAanvFFDQQJCyiztBbldgmFnobG
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.default_schema=bd_siav
+#Primary DB
+jdbc.master.url=jdbc:postgresql://viaduct.proxy.rlwy.net:29020/railway
+jdbc.master.username=postgres
+jdbc.master.password=nODKHQAanvFFDQQJCyiztBbldgmFnobG
+
+#Secondary DB
+jdbc.slave.url=jdbc:postgresql://monorail.proxy.rlwy.net:39574/railway
+jdbc.slave.username=postgres
+jdbc.slave.password=CzrITqCLjvMSZWEeeQBfRLNKLbdISpAT
+
+spring.aop.proxy-target-class=true
+
+spring.jpa.properties.org.hibernate.flushMode = MANUAL
+
 
 spring.jpa.show-sql=true
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=none
-
-spring.sql.init.mode=always
-spring.sql.init.continue-on-error=true
