--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,9 @@ spring.datasource.url=jdbc:postgresql://viaduct.proxy.rlwy.net:29020/railway
 spring.datasource.username=postgres
 spring.datasource.password=nODKHQAanvFFDQQJCyiztBbldgmFnobG
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.default_schema=bd_siav
+spring.jpa.properties.hibernate.default_schema=siav
+server.port=8081
 
-spring.jpa.show-sql=true
-
-logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=none
 
 spring.sql.init.mode=always
